<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>locomotion</name>
	<version>0.1.1</version>
	<description>Locomotion controller for the MR-Buggy3. Gets positions and published RC/Manual commands to the PX4 autopilot.</description>
	<maintainer email="fabian_naef@live.com">NotBlackMagic</maintainer>
	<license>Apache License 2.0</license>

	<depend>numpy</depend>
	<depend>px4_msgs</depend>
	<depend>pymavlink</depend>

	<exec_depend>rclpy</exec_depend>
	<exec_depend>std_msgs</exec_depend>
	<exec_depend>ros2launch</exec_depend>

	<test_depend>ament_copyright</test_depend>
	<test_depend>ament_flake8</test_depend>
	<test_depend>ament_pep257</test_depend>
	<test_depend>python3-pytest</test_depend>

	<export>
		<build_type>ament_python</build_type>
	</export>
</package>
